--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,28 @@
-form {
-  background-color: #3bbf89;
-  width: 50%;
+body {
+  padding-top: 20px;
+  background-color: #330011;
+  color: #fff;
+  font-family: "Homenaje", sans-serif, cursive;
   text-align: center; }
-
-.form-control {
-  width: 40%;
-  margin: auto; }
+  body form {
+    width: 50%;
+    -webkit-box-shadow: 0px 0px 20px 1px #d6b9b9;
+    -moz-box-shadow: 0px 0px 20px 1px #d6b9b9;
+    box-shadow: 0px 0px 20px 1px #d6b9b9;
+    border-radius: 25px;
+    -moz-border-radius: 25px;
+    -webkit-border-radius: 25px;
+    margin: 20px; }
+    body form .form-element {
+      margin-bottom: 10px; }
+    body form .btn {
+      background-color: #99004d;
+      border-color: #d6bde3;
+      color: #fff; }
+      body form .btn:hover {
+        background-color: #ffcce5; }
+      body form .btn:active {
+        background-color: #ffcce5;
+        transform: scale(0.7); }
 
 /*# sourceMappingURL=style.css.map */
