--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,12 +1,64 @@
-$main-background-color: #3bbf89;
+$main-background-color: #330011;
+$main-text-color: #fff;
+$main-font: 'Homenaje', sans-serif, cursive;
+$body-padding-top: 20px;
+$form-elements-margin: 10px;
+$form-width: 50%;
+$form-margin: 20px;
+$form-shadow: 0px 0px 20px 1px #d6b9b9;
+$form-border-radius: 25px;
+$btn-main-color: #99004d;
+$btn-border-color: #d6bde3;
+$btn-hover-color: #ffcce5;
+$btn-active-color: #ffcce5;
+$btn-scale-factor: 0.7;
 
-form {
-  background-color: $main-background-color;
-  width: 50%;
-  text-align: center;
+@mixin scale($value) {
+  -webkit-transform: scale($value);
+  -moz-transform: scale($value);
+  -ms-transform: scale($value);
+  -o-transform: scale($value);
+
 }
+@mixin btn-style {
+   background-color: $btn-main-color;
+   border-color: $btn-border-color;
+   color: $main-text-color;
 
-.form-control {
-  width: 40%;
-  margin: auto;
+   &:hover {
+      background-color: $btn-hover-color;
+   }
+   &:active {
+     background-color: $btn-active-color;
+     transform: scale($btn-scale-factor);
+   }
+ }
+
+body {
+  padding-top: $body-padding-top;
+  background-color: $main-background-color;
+  color: $main-text-color;
+  font-family: $main-font;
+  text-align: center;
+
+  form {
+    width: $form-width;
+    -webkit-box-shadow: $form-shadow;
+    -moz-box-shadow: $form-shadow;
+    box-shadow: $form-shadow;
+    border-radius: $form-border-radius;
+    -moz-border-radius: $form-border-radius;
+    -webkit-border-radius: $form-border-radius;
+    margin: $form-margin;
+
+    .form-element {
+      margin-bottom: $form-elements-margin;
+    }
+
+    .btn {
+      @include btn-style();
+    }
+
+  }
+
 }
