--- a/views/index.html
+++ b/views/index.html
@@ -3,30 +3,36 @@
 
    <head>
       <title>Exercise Tracker</title>
-      <link rel="stylesheet" href="../scripts/css/bootstrap.min.css">
+      <link rel="stylesheet" href="../scripts/bootstrap/css/bootstrap.min.css">
+      <link href="https://fonts.googleapis.com/css?family=Homenaje" rel="stylesheet">
       <link href="../stylesheets/style.css" rel="stylesheet" type="text/css">
-      <script src="../scripts/js/bootstrap.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+      <script src="../scripts/bootstrap/js/bootstrap.min.js"></script>
    </head>
 
    <body>
       <div class="container">
          <h1>Exercise tracker</h1>
-          <form action="/api/exercise/new-user" method="post" class="form-group">
+         <div class="d-flex flex-row">
+          <form action="/api/exercise/new-user" method="post" class="form-group p-2">
             <h3>Create a New User</h3>
             <p><code>POST /api/exercise/new-user</code></p>
-            <input type="text"  class="form-control" name="username" placeholder="username">
-            <input type="submit" class="btn" value="Submit">
+            <input type="text"  class="form-control form-element"  name="username" placeholder="username" required>
+            <input type="submit" class="btn form-element" value="Submit">
           </form>
-          <form action="/api/exercise/add" method="post" class="form-group">
+          <form action="/api/exercise/add" method="post" class="form-group p-2">
             <h3>Add exercises</h3>
             <p><code>POST /api/exercise/add</code></p>
-            <input type="text"  class="form-control" name="userId" placeholder="userId*">
-            <input  type="text"  class="form-control" name="description" placeholder="description*">
-            <input  type="text"  class="form-control" name="duration" placeholder="duration* (mins.)">
-            <input  type="text"  class="form-control" name="date" placeholder="date (yyyy-mm-dd)">
-            <input type="submit" class="btn" value="Submit">
+            <input type="text"  class="form-control form-element" name="userId" placeholder="userId*" required>
+            <input  type="text"  class="form-control form-element" name="description" placeholder="description*" required>
+            <input  type="text"  class="form-control form-element" name="duration" placeholder="duration* (mins.)" required>
+            <input  type="text"  class="form-control form-element" name="date" placeholder="date (yyyy-mm-dd)">
+            <input type="submit" class="btn form-element" value="Submit">
           </form>
-          <p><strong>GET users's exercise log: </strong><code>GET /api/exercise/log?{userId}[&amp;from][&amp;to][&amp;limit]</code></p>
+        </div>
+          <p><strong>GET users's exercise log : </strong><code> GET /api/exercise/log?{userId}[&amp;from][&amp;to][&amp;limit]</code></p>
           <p><strong>{ }</strong> = required, <strong>[ ]</strong> = optional</p>
           <p><strong>from, to</strong> = dates (yyyy-mm-dd); <strong>limit</strong> = number</p>
       </div>
